tests/cases/memory/errors/zone-pointer-after-destroy.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::alloc<i64>(ref mut zone);
  zone::destroy(zone);
  return *item;
}
